<?xml version="1.0" encoding="utf-8"?>

<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Inventory</string>

    <!-- Label for overflow menu option that inserts fake item com.example.android.inventoryapp.data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_item_data">Insert Item Data</string>

    <!-- Label for overflow menu option that deletes all item com.example.android.inventoryapp.data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Items</string>

    <!-- Title for the activity to add a new item [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_item">Add a Item</string>

    <!-- Label for editor menu option to save item and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current item [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>

    <!-- Label for gender information in the editor [CHAR LIMIT=30] -->
    <string name="category_product_name">Product Name</string>

    <!-- Label for measurement information in the editor [CHAR LIMIT=30] -->
    <string name="category_Price">Price</string>

    <string name="category_Quantity">Quantity</string>

    <string name="category_Suppliers_Name">Suppliers Name</string>

    <string name="category_Suppliers_Phone_Number">Supplier Phone Number</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_name">Name</string>

    <!-- Text hint for breed field in the editor [CHAR LIMIT=30] -->
    <string name="hint_price">0</string>

    <string name="hint_Quantity">0</string>

    <string name="hint_Suppliers_Name">Suppliers name</string>

    <string name="hint_phone_number">0</string>

    <string name="sell_button">sell</string>

    <string name="add_an_item">Add an Item</string>

    <string name="edit_item">Edit Item</string>

    <string name="error_save_item">Error while saving item!</string>

    <string name="item_save">Item saved!</string>

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>

    <string name="delete_dialog_msg">Delete this item?</string>

    <string name="delete">Delete</string>

    <string name="cancel">Cancel</string>

    <string name="editor_delete_item_successful">Item deleted</string>

    <string name="editor_delete_item_failed">Error with deleting item</string>

    <string name="empty_view">No items! Hit the + button to insert one ;)</string>

    <string name="empty_product_price">The product price field is empty!</string>
    <string name="empty_product_name">The product name field is empty!</string>
    <string name="empty_product_quantity">The product quantity field is empty!</string>
    <string name="empty_suppliers_name">The suppliers name field is empty!</string>
    <string name="empty_suppliers_phone">The suppliers phone field is empty!</string>
</resources>
