<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dp16"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_product_name"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_name"
                android:hint="@string/hint_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_Price"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_price"
                android:hint="@string/hint_price"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_Quantity"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/minusButton"
                android:layout_weight="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"/>

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_quantity"
                android:layout_weight="2"
                android:hint="@string/hint_Quantity"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <Button
                android:id="@+id/plusButton"
                android:layout_weight="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_Suppliers_Name"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_suppliers_name"
                android:hint="@string/hint_Suppliers_Name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_Suppliers_Phone_Number"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="horizontal">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_suppliers_phone_number"
                android:layout_weight="1"
                android:hint="@string/hint_phone_number"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <Button
                android:id="@+id/callButton"
                android:layout_weight="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="call"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>